--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <header class="book-header">
         <h1>Book Library</h1>
         <button class="openNewBookModal">New Book</button>
-        <form class="bookInputs">
-            <label for="book_title">Book Title</label>
-            <input type="text" id="book_title">
-            <label for="book_author">Book Author</label>
-            <input type="text" id="book_author">
-            <label for="book_pages">Book Pages</label>
-            <input type="text" id="book_pages">
+        <form class="form bookInputs">
+            <label for="book_title">Book Title *</label>
+            <input type="text" id="book_title" minlength="5" required />
+            <label for="book_author">Book Author *</label>
+            <input type="text" id="book_author" minlength="5" required />
+            <label for="book_pages">Book Pages *</label>
+            <input type="number" id="book_pages" min="10" required />
             <label for="if_read">Have you read the book?</label>
-            <input type="checkbox" id="if_read">
+            <input type="checkbox" id="if_read" />
             <button class="addNewBookBtn">Add Book</button>
         </form>
     </header>
